Revision history for Perl extension Search::Xapian.

0.9.10.0  Tue Mar 06 02:27:02 2007
	[Changes contributed by Rusty Conover]
	- Wrap MatchDecider and make it usable with Enquire::get_mset()
	- Wrap check_at_least parameter of Enquire::get_mset()
	[Changes contributed by Olly Betts]
	- Wrap rset parameter of Enquire::get_mset()
	- Make all get_mset parameter combinations available via
	  Enquire::matches()
	- Add tests for check_at_least and rset parameters of
	  Enquire::get_mset()
	- Avoid warning from MakeMaker when generating Makefile for linking 
	  against an uninstalled xapian-core tree.
	- Correct several errors in the pod documentation for
	  Search::Xapian::PositionIterator.

0.9.9.1  Mon Dec 11 06:08:57 2006
	[Changes contributed by Olly Betts]
	- Fix typo in BoolWeight documentation.
	- Fix BoolWeight default constructor (broken by changes in 0.9.9.0).
	- Wrap TradWeight class.

0.9.9.0  Mon Nov 09 02:31:09 2006
	[Changes contributed by Olly Betts]
	- Fix the BM25Weight constructors.
	- Fix problem with isa not being known in Xapian::PostingIterator.
	- Wrap the newly implemented transaction API to WritableDatabase.

0.9.6.0  Sun Jun 04 01:14:00 2006
	[Changes contributed by Olly Betts]
	- Alex's CPAN email address bounces, so change occurences of it
	  to direct users to the xapian-discuss mailing list for now.
	- Correct several occurrences of "Xapian::Search::" to
	  "Search::Xapian::".
	- Wrap Enquire::set_docid_order (and document set_sort_forward
	  as deprecated.)
	- Wrap new method Enquire::set_sort_by_relevance_then_value.
	- Document Enquire::set_sort_by_* (and document set_sorting as
	  deprecated.)
	- Wrap the BM25Weight constructor which takes parameters
	  (the default one is much less useful, since Xapian defaults
	  to BM25Weight with the default parameters anyway!)
	- Wrap Enquire::set_sort_by_value_then_relevance()
	- Wrap the optional flags parameter to QueryParser::parse_query().